--- a/src/components/ui-input/index.css
+++ b/src/components/ui-input/index.css
@@ -50,3 +50,8 @@
   top: 15px;
   right: 15px;
 }
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px #0e1d3d inset;
+  -webkit-text-fill-color: #fff !important;
+}
